--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,7 +11,8 @@
 @import "_nosotros.scss";
 @import "_laflota.scss";
 @import "_error404.scss";
-@import "_medias.scss"
+@import "_medias.scss";
+
 
 
 
