se optimizaron las imagenes de la web

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,7 +12,6 @@
 @import "_laflota.scss";
 @import "_error404.scss";
 @import "_medias.scss";
-
-
+@import "../node_modules/animate.css/source/fading_entrances/fadeInUp";
 
 
