--- a/css/styles.css
+++ b/css/styles.css
@@ -1944,5 +1944,18 @@ footer .group3-footer ul li a:hover {
     display: block;
   }
 }
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translate3d(0, 100%, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+.fadeInUp {
+  animation-name: fadeInUp;
+}
 
 /*# sourceMappingURL=styles.css.map */
