--- a/scss/_medias.scss
+++ b/scss/_medias.scss
@@ -244,7 +244,7 @@
 
             li {
                 a {
-                    color: #e9f5ec; // $textcolor
+                    color: var(--font-light); // $textcolor
                 }
             }
         }
