--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -37,7 +37,7 @@
 
 /*boton hamburgesa de la nav*/
 .navbar-toggler {
-    border-color: white;
+    border-color: var(--color-light);
 }
 
 .navbar-toggler-icon {
