--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -14,12 +14,12 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f4f4f4;
+  background-color: var(--bg-light);
 }
 
 .section-form {
   padding: 5px;
-  background-color: #fff;
+  background-color: var(--bg-light);
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   max-width: 800px;
   margin: auto;
@@ -64,7 +64,7 @@ textarea {
 
 input:focus,
 textarea:focus {
-  border-color: #007bff;
+  border-color: var(--bg-main);
 }
 
 
@@ -88,7 +88,7 @@ button:hover {
 }
 
 .form-info {
-  background-color: #f8f9fa;
+  background-color: var(--bg-light);
   padding: 15px;
   border-radius: 4px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -118,8 +118,10 @@ button:hover {
   padding: 0.7em 3.3em 0.7em 1.7em;
   font-size: 18px;
   border-radius: 0.5em;
-  background: #e8e8e8;
-  border: 1px solid #e8e8e8;
+  background: var(--bg-light);
+  border: 1px solid var(--bg-light);
+  text-decoration: none;
+
 }
 
 .button2>svg {
@@ -132,7 +134,7 @@ button:hover {
 .button2:active {
   color: #666;
   box-shadow: inset 4px 4px 12px #c5c5c5,
-    inset -4px -4px 12px #ffffff;
+    inset -4px -4px 12px var(--bg-light);
 }
 
 .button2:before {
