--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -23,7 +23,7 @@ footer {
         padding: 45px 10px;     
         .red-social a {
             img {
-                stroke: white;
+                stroke: var(--font-light);
             }
             display: inline-block;
             text-decoration: none;
@@ -41,18 +41,10 @@ footer {
                 font-size: 1.2em; /* $textsm */
             }
         }
-        .box {
-            h2 {
-                font-size: 1.2em; /* $textsm */
-            }
-            p {
-                color: #e9f5ec; /* $textcolor */
-                margin-bottom: 10px;
-            }
-        }
+        
     }
     .group2-footer {
-        background-color: #0a1a2a; /* $bgblack2 */
+        background-color: var(--bg-dark); /* $bgblack2 */
         padding: 15px 10px; /* map-get($padding-map, p15-10) */
         text-align: center;
         color: var(--font-light); /* $textcolor */
@@ -78,7 +70,7 @@ footer {
     }
 }
 .svg-link {
-    fill: white;
+    fill: var(--bg-light);
 }
 
 /*footer*/
