--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -237,6 +237,9 @@ button:hover {
   border-radius: var(--border-radius);
   box-shadow: var(--box-shadow);
   transition: var(--transition);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .team-member:hover {
