--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -33,7 +33,11 @@ h2 {
 p {
   color: var(--font-light);
 }
-
+#text-light{
+  color: var(--font-light);
+  margin-bottom: 1rem;
+  font-size: 22px;
+}
 /* Custom button styles */
 .btn,
 #btn-submit {
