--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -44,7 +44,7 @@ p {
   padding: 0.8em 1.75em;
   background-color: transparent;
   border-radius: 6px;
-  border: 0.3px solid var(--font-dark);
+  border: 0.3px solid var(--font-light);
   position: relative;
   overflow: hidden;
   cursor: pointer;
